--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "seq-browser",
   "version": "0.1.0",
   "description": "Log to Seq from the browser",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --config webconfig.config.js --mode development --progress --display-error-details ---watch",
+    "lint": "eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/ChrisH91/seq-browser/issues"
   },
-  "homepage": "https://github.com/ChrisH91/seq-browser#readme"
+  "homepage": "https://github.com/ChrisH91/seq-browser#readme",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
+  }
 }
