--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Log to Seq from the browser",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test-server": "node tools/test-server",
     "dev": "webpack --config webconfig.config.js --mode development --progress --display-error-details ---watch",
     "lint": "eslint **/*.js"
   },
@@ -18,11 +19,15 @@
   },
   "homepage": "https://github.com/ChrisH91/seq-browser#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "express": "^4.16.3",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
   }
