--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "Log to Seq from the browser",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test nyc mocha */*.spec.js && nyc report --reporter=html",
+    "test-ci": "cross-env NODE_ENV=test nyc mocha */*.spec.js && nyc report --reporter=text-lcov | coveralls",
     "test-server": "node tools/test-server",
     "dev": "webpack --config webpack.config.js --mode development --progress --display-error-details ---watch",
     "prod": "webpack --config webpack.config.js --mode production",
@@ -22,14 +23,39 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-preset-env": "^1.6.1",
+    "coveralls": "^3.0.1",
+    "cross-env": "^5.1.4",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
+    "mocha": "^5.1.1",
+    "nyc": "^11.7.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ],
+    "env": {
+      "test": {
+        "plugins": [
+          "istanbul"
+        ]
+      }
+    }
+  },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false,
+    "include": "src"
   }
 }
