--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
     "coveralls": "^3.0.1",
     "cross-env": "^5.1.4",
     "eslint": "^4.19.1",
@@ -35,6 +36,7 @@
     "express": "^4.16.3",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
+    "sinon": "^5.0.7",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
   },
@@ -56,7 +58,9 @@
     ],
     "sourceMap": false,
     "instrument": false,
-    "include": ["src/**/*.js"],
+    "include": [
+      "src/**/*.js"
+    ],
     "all": true
   }
 }
