--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/ChrisH91/seq-browser/issues"
   },
   "homepage": "https://github.com/ChrisH91/seq-browser#readme",
+  "main": "dist/seq-browser.js",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
