--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seq-browser",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Log to Seq from the browser",
   "scripts": {
     "test": "cross-env NODE_ENV=test nyc mocha */*.spec.js && nyc report --reporter=html",
@@ -19,6 +19,9 @@
   "bugs": {
     "url": "https://github.com/ChrisH91/seq-browser/issues"
   },
+  "files": [
+    "dist/*.js"
+  ],
   "homepage": "https://github.com/ChrisH91/seq-browser#readme",
   "main": "dist/seq-browser.js",
   "devDependencies": {
